# object-rec-demos

./: .gitignore  README.md  README_d_linearClassifier.md
a_SFM_offline/: CMakeLists.txt  elasWrapper.cpp  main.cpp
a_SFM_offline/calib_files/: SFM.ini  SFM_bkp_icubworld.ini  icubEyes.ini  icubEyes_640x480.ini
b_dispBlobber_offline/: CMakeLists.txt  dispBlobber.cpp  dispBlobber.h  main.cpp
c_caffeCoder_offline/: CMakeLists.txt  CaffeFeatExtractor.hpp  main.cpp
c_caffeCoder_offline/caffe_models/: imagenet_val_cutfc7.prototxt
d_linearClassifier_offline/: CMakeLists.txt  RLSlinear.cpp  RLSlinear.h  linearClassifier.cpp  linearClassifier.h  main.cpp  win_dirent.h
